# codetracer-js-recorder

./: .gitignore  AGENTS.md  AUDIT-CTFS-2026-05.md  Justfile  README.md  flake.nix  package-lock.json  package.json  tsconfig.json
.github/: sibling-pins  sibling-pins.json
.github/workflows/: ci.yml
crates/recorder_native/: Cargo.toml  build.rs
crates/recorder_native/src/: lib.rs
examples/: functions.js  hello.js  loops.js
tests/: cli-conventions.test.ts  smoke.test.ts  verify-cli-convention-no-silent-skip.sh
tests/async/: async.test.ts
tests/benchmarks/: benchmarks.test.ts
tests/deep-values/: deep-values.test.ts
tests/e2e/: ct-binary.test.ts  ctfs-audit.test.ts  e2e.test.ts
tests/hcr/: hcr.test.ts  index.js  mymodule.js  mymodule_v2.js
tests/helpers/: ct-print.ts  parse-trace.ts
tests/integration/: addon.test.ts
tests/io-filtering/: io-filtering.test.ts
tests/runtime/: runtime.test.ts
tests/sourcemaps/: sourcemaps.test.ts
tests/transform/: transform.test.ts
tests/values/: values.test.ts
