[package]
name = "codetracer_js_recorder_native"
version = "0.1.0"
edition = "2021"
description = "CodeTracer JavaScript recorder — Rust N-API addon for trace writing"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CodeTracer trace format — used to write binary .ct traces via the Nim-backed writer.
# The path assumes the codetracer-trace-format repo is a sibling of codetracer-js-recorder
# in the workspace (managed by `repo`).
codetracer_trace_types = { path = "../../../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_writer_nim = { path = "../../../codetracer-trace-format/codetracer_trace_writer_nim" }
codetracer_ctfs = { path = "../../../codetracer-trace-format/codetracer_ctfs" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
